@@ -25,6 +25,33 @@ an existing option. Before the model is submitted to the back-end, all keys and
 values are converted into strings using the \link{as.character} function. To reset
 all options to their default values, use reset = TRUE. If reset = TRUE, then 'key'
 and 'value' are ignored. Use \code{getOption('mxOptimizerOptions')} to see the default optimizer options.
+
+OpenMx options
+
+\tabular{rccl}{
+CalculateHessian \tab [Yes|No] \tab  \tab TODO fill this out \cr
+StandardErrors \tab [Yes|No] \tab   \tab TODO fill this out \cr
+MLConfidenceIntervals \tab [Yes|No] \tab  \tab TODO fill this out \cr
+}
+
+NPSOL-specific options
+
+\tabular{rcl}{
+Nolist \tab \tab this option suppresses printing of the options \cr
+Print level \tab \var{i} \tab the value of \var{i} controls the amount of printout produced by the major iterations \cr
+Minor print level \tab \var{i} \tab the value of \var{i} controls the amount of printout produced by the minor iterations \cr
+Print file \tab \var{i} \tab for \var{i} > 0 a full log is sent to the file with logical unit number \var{i}. \cr
+Summary file \tab \var{i} \tab for \var{i} > 0 a brief log will be output to file \var{i}. \cr
+Function Precision \tab \var{r} \tab a measure of accuracy with which \var{f} and \var{c} can be computed. \cr
+Infinite Bound Size \tab \var{r} \tab if \var{r} > 0 defines the "infinite" bound bigbnd. \cr 
+Feasibility tolerance \tab \var{r} \tab the maximum acceptable absolute violations in linear and nonlinear constraints. \cr
+Major iterations \tab \var{i} \tab the maximum number of major iterations before termination. \cr
+Verify level \tab [-1:3|Yes|No] \tab see NPSOL manual. \cr
+Line search tolerance \tab \var{r} \tab controls the accuracy with which a step is taken. \cr
+Derivative Level \tab [0-3] \tab see NPSOL manual. \cr
+Hessian \tab [Yes|No] \tab return the transformed Hessian or the Hessian itself. \cr
+}
+
 }
 	
 \value{
@@ -40,7 +67,6 @@ The OpenMx User's guide can be found at http://openmx.psyc.virginia.edu/document
 model <- mxModel()
 
 model <- mxOption(model, "Function Precision", 1e-5)
-model <- mxOption(model, "Hessian", "No")
 model <- mxOption(model, "Function Precision", NULL)
 
 }
